Optimize IslandManager search